--- a/index.html
+++ b/index.html
@@ -81,18 +81,19 @@
         <!-- connection -->
         <ul class="d-flex nav-butons gap-3">
           <li class="nav-item">
-            <a href="" class="text-dark">se connecter</a>
+            <a href="form_login.html" class="text-dark">se connecter</a>
           </li>
           <li class="nav-item">
-            <a href="" class="text-dark">inscription</a>
+            <a href="form_signin.html" class="text-dark">inscription</a>
           </li>
         </ul>
       </div>
+      
     </nav>
   </header>
   <main>
 
-</section>
+    <div class="mousemove"></div>
 
     <section class="lotus d-flex align-items-center justify-content-center ">
       <!-- photo -->
@@ -109,7 +110,7 @@
 
         <div class="row"> <!-- ça aligne -->
           <div class="col-lg-12 affaires"> <!-- On copie ça le nombre de fois ou on a besoin et on adapte le nombre de colonne-->
-            <div class="border mb-3 ">
+            <div class="border mb-3 "> </div>
               <h2 class="text-center">//Nous prenons soin de vos affaires </h2>
               
             </div>
@@ -288,6 +289,7 @@
 
 
   </footer>
+  <script src="./js/mouse.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./js/owl.carousel.min.js"></script>
   <script src="./js/accessconfig.min.js"></script>
